# caesar_benchmarks_secondround

./: CMakeLists.txt  README.md
cmake/: setDefaultSettings.cmake
crypto_aead/acorn128v2/opt/: encrypt.c
crypto_aead/acorn128v2/ref/: encrypt.c
crypto_aead/aeadaes192ocbtaglen128v1/opt/: encrypt.c  ocb.c
crypto_aead/aeadaes256ocbtaglen64v1/ref/: encrypt.c
crypto_aead/aegis128/aesni/: encrypt.c
crypto_aead/aegis128/ref/: encrypt.c
crypto_aead/aegis128l/aesnia/: encrypt.c
crypto_aead/aegis128l/aesnib/: encrypt.c
crypto_aead/aegis128l/aesnic/: encrypt.c
crypto_aead/aegis128l/ref/: ecrypt.c
crypto_aead/aegis256/aesni/: encrypt.c
crypto_aead/aegis256/ref/: encrypt.c
crypto_aead/aes128gcmv1/openssl/: decrypt.c  encrypt.c
crypto_aead/aes128gcmv1/ref/: crypto_core_aes128encrypt.c  crypto_core_aes128encrypt.h  crypto_verify_16.h  encrypt.c
crypto_aead/aes128n12t8clocv2/aesni/: encrypt.c
crypto_aead/aes128n12t8clocv2/ref/: encrypt.c
crypto_aead/aes128n12t8silcv2/aesni/: encrypt.c
crypto_aead/aes128n12t8silcv2/ref/: encrypt.c
crypto_aead/aes128n8t8clocv2/aesni/: encrypt.c
crypto_aead/aes128n8t8clocv2/ref/: encrypt.c
crypto_aead/aes128n8t8silcv2/aesni/: encrypt.c
crypto_aead/aes128otrpv2/ref/: encrypt.c
crypto_aead/aes128otrpv3/nip8m2/: encrypt.c
crypto_aead/aes128otrsv3/nip7m1/: encrypt.c
crypto_aead/aes128poetv2aes128ls0lt0/ref/: encrypt.c  poet.c
crypto_aead/aes128poetv2aes128ls128lt128/ref/: encrypt.c  poet.c  poet.h
crypto_aead/aes128poetv2aes4ls0lt0/ni/: encrypt.c
crypto_aead/aes128poetv2aes4ls0lt0/ref/: poet.c
crypto_aead/aes128poetv2aes4ls128lt128/ref/: encrypt.c  poet.c  poet.h
crypto_aead/aes256gcmv1/ref/: crypto_core_aes256encrypt.c.c  crypto_core_aes256encrypt.h  encrypt.c
crypto_aead/aes256otrsv3/ref/: encrypt.c
crypto_aead/aescopav2/ref/: encrypt.c
crypto_aead/aesjambuv2/aesni/: encrypt_aesni.c
crypto_aead/aesjambuv2/ref/: encrypt.c
crypto_aead/aezv4/aesni/: encrypt.c
crypto_aead/aezv4/ref/: encrypt.c
crypto_aead/ascon128av11/opt64/: ascon.c
crypto_aead/ascon128av11/ref/: ascon.c
crypto_aead/ascon128v11/opt64/: ascon.c
crypto_aead/ascon128v11/ref/: ascon.c
crypto_aead/deoxyseq256128v13/ref/: encrypt.c
crypto_aead/deoxysneq128128v13/aesni/: ae.macros  deoxys.c
crypto_aead/deoxysneq256128v13/aesni/: ae.macros  deoxys.c  encrypt.c
crypto_aead/elmd1000v2/ref/: encrypt.c
crypto_aead/elmd1001v2/ref/: encrypt.c
crypto_aead/elmd101270v2/ref/: encrypt.c
crypto_aead/elmd101271v2/ref/: encrypt.c
crypto_aead/elmd600v2/ref/: encrypt.c
crypto_aead/elmd601v2/ref/: encrypt.c
crypto_aead/elmd61270v2/ref/: encrypt.c
crypto_aead/elmd61271v2/ref/: encrypt.c
crypto_aead/hs1sivhiv1/ref/: encrypt.c
crypto_aead/hs1sivlov1/ref/: encrypt.c
crypto_aead/hs1sivv1/ref/: encrypt.c
crypto_aead/icepole128av2/ref/: encrypt.c
crypto_aead/icepole128v2/ref/: encrypt.c
crypto_aead/icepole256av2/ref/: encrypt.c
crypto_aead/joltikeq80112v13/ref/: encrypt.c
crypto_aead/joltikneq12864v13/ref/: encrypt.c
crypto_aead/joltikneq6464v13/ref/: encrypt.c
crypto_aead/joltikneq80112v13/ref/: encrypt.c
crypto_aead/joltikneq9696v13/ref/: encrypt.c
crypto_aead/ketjejrv1/ARMv6M/: encrypt.c
crypto_aead/ketjesrv1/AVR8/: encrypt.c
crypto_aead/lakekeyakv2/generic64/: encrypt.c
crypto_aead/lunarkeyakv2/Nehalem/: encrypt.c
crypto_aead/minalpherv11/avx2/: encrypt.cpp
crypto_aead/minalpherv11/ref/: encrypt.c
crypto_aead/morus1280128v1/avx2/: morus1280128v1avx2.c
crypto_aead/morus1280128v1/ref/: encrypt.c
crypto_aead/morus1280128v1/ref64/: morus1280128v1opt64.c
crypto_aead/morus1280128v1/sse2/: morus1280128v1sse2.c
crypto_aead/morus1280256v1/avx2/: morus1280256v1avx2.c
crypto_aead/morus1280256v1/ref/: encrypt.c
crypto_aead/morus1280256v1/ref64/: morus1280256v1opt64.c
crypto_aead/morus1280256v1/sse2/: morus1280256v1sse2.c
crypto_aead/morus640128v1/ref/: encrypt.c
crypto_aead/morus640128v1/sse2/: morus640128v1sse2.c
testing/: test.c
timing/: time.c
visualisation/: visualisation2D.m  visualisation3D.m  visualisationAllCiphers2D.m
(+51 files in other folders)
